--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-primary">Buy Now >></button>
+                    <button class="btn btn-primary">Buy Now</button>
                   
                 </div>
               </div>
